[tool.poetry]
name = "tetrimino"
version = "0.1.0"
description = ""
authors = ["Harry Keightley <harrykeightley@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pyright = "^1.1.337"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
